@@ -30,7 +30,6 @@
       },
       "develop" : {
          "requires" : {
-            "File::Spec" : "0",
             "Perl::Critic" : "1.130",
             "Perl::Critic::Policy::Moose::ProhibitDESTROYMethod" : "1.05",
             "Perl::Critic::Policy::Moose::ProhibitLazyBuild" : "1.05",
@@ -117,10 +116,12 @@
             "Dist::Zilla::Plugin::VerifyPhases" : "0",
             "Dist::Zilla::Plugin::VersionFromMainModule" : "0",
             "Dist::Zilla::Role::BeforeBuild" : "0",
+            "Dist::Zilla::Role::FileFinderUser" : "0",
             "Dist::Zilla::Role::FileMunger" : "0",
             "Dist::Zilla::Role::PluginBundle::Config::Slicer" : "0",
             "Dist::Zilla::Role::PluginBundle::Easy" : "0",
             "Dist::Zilla::Role::TextTemplate" : "0",
+            "File::Spec" : "0",
             "List::MoreUtils" : "0",
             "Moose" : "0.99",
             "Path::Tiny" : "0",
@@ -133,6 +134,7 @@
       "test" : {
          "requires" : {
             "Test::More" : "0",
+            "lib" : "0",
             "perl" : "5.006"
          }
       }
@@ -222,6 +224,7 @@
          "Dist::Zilla::Plugin::VerifyPhases" : "0.016",
          "Dist::Zilla::Plugin::VersionFromMainModule" : "0.03",
          "Dist::Zilla::Role::BeforeBuild" : "6.010",
+         "Dist::Zilla::Role::FileFinderUser" : "6.010",
          "Dist::Zilla::Role::FileMunger" : "6.010",
          "Dist::Zilla::Role::PluginBundle::Config::Slicer" : "0.202",
          "Dist::Zilla::Role::PluginBundle::Easy" : "6.010",
@@ -257,6 +260,7 @@
          "Test::Portability::Files" : "0.07",
          "Test::Spelling" : "0.20",
          "Test::Version" : "2.05",
+         "lib" : "0.63",
          "namespace::autoclean" : "0.28",
          "strict" : "1.11",
          "warnings" : "1.36"
@@ -384,12 +388,12 @@
          {
             "class" : "Dist::Zilla::Plugin::Author::SKIRMESS::RepositoryBase",
             "name" : "@Author::SKIRMESS/Author::SKIRMESS::RepositoryBase",
-            "version" : "0.021"
+            "version" : "0.022"
          },
          {
             "class" : "Dist::Zilla::Plugin::Author::SKIRMESS::InsertVersion",
             "name" : "@Author::SKIRMESS/Author::SKIRMESS::InsertVersion",
-            "version" : "0.021"
+            "version" : "0.022"
          },
          {
             "class" : "Dist::Zilla::Plugin::NextRelease",
@@ -414,6 +418,7 @@
                      "README.md",
                      "cpanfile",
                      "dist.ini",
+                     "t/00-load.t",
                      "xt/author/clean-namespaces.t",
                      "xt/author/critic.t",
                      "xt/author/minimum_version.t",
@@ -779,6 +784,7 @@
                      "README.md",
                      "cpanfile",
                      "dist.ini",
+                     "t/00-load.t",
                      "xt/author/clean-namespaces.t",
                      "xt/author/critic.t",
                      "xt/author/minimum_version.t",
