@@ -73,10 +73,12 @@ my %WriteMakefileArgs = (
     "Dist::Zilla::Plugin::VerifyPhases" => 0,
     "Dist::Zilla::Plugin::VersionFromMainModule" => 0,
     "Dist::Zilla::Role::BeforeBuild" => 0,
+    "Dist::Zilla::Role::FileFinderUser" => 0,
     "Dist::Zilla::Role::FileMunger" => 0,
     "Dist::Zilla::Role::PluginBundle::Config::Slicer" => 0,
     "Dist::Zilla::Role::PluginBundle::Easy" => 0,
     "Dist::Zilla::Role::TextTemplate" => 0,
+    "File::Spec" => 0,
     "List::MoreUtils" => 0,
     "Moose" => "0.99",
     "Path::Tiny" => 0,
@@ -85,7 +87,8 @@ my %WriteMakefileArgs = (
     "warnings" => 0
   },
   "TEST_REQUIRES" => {
-    "Test::More" => 0
+    "Test::More" => 0,
+    "lib" => 0
   },
   "VERSION" => "0.022",
   "test" => {
@@ -151,14 +154,17 @@ my %FallbackPrereqs = (
   "Dist::Zilla::Plugin::VerifyPhases" => 0,
   "Dist::Zilla::Plugin::VersionFromMainModule" => 0,
   "Dist::Zilla::Role::BeforeBuild" => 0,
+  "Dist::Zilla::Role::FileFinderUser" => 0,
   "Dist::Zilla::Role::FileMunger" => 0,
   "Dist::Zilla::Role::PluginBundle::Config::Slicer" => 0,
   "Dist::Zilla::Role::PluginBundle::Easy" => 0,
   "Dist::Zilla::Role::TextTemplate" => 0,
+  "File::Spec" => 0,
   "List::MoreUtils" => 0,
   "Moose" => "0.99",
   "Path::Tiny" => 0,
   "Test::More" => 0,
+  "lib" => 0,
   "namespace::autoclean" => "0.09",
   "strict" => 0,
   "warnings" => 0
