@@ -1,11 +1,18 @@
 #!perl
 
+use 5.006;
 use strict;
 use warnings;
 
+# this test was generated with
+# Dist::Zilla::Plugin::Author::SKIRMESS::RepositoryBase 0.022
+
 use Test::More;
 
+use lib qw(lib);
+
 my @modules = qw(
+  Dist::Zilla::Plugin::Author::SKIRMESS::InsertVersion
   Dist::Zilla::Plugin::Author::SKIRMESS::RepositoryBase
   Dist::Zilla::PluginBundle::Author::SKIRMESS
 );
@@ -15,5 +22,3 @@ plan tests => scalar @modules;
 for my $module (@modules) {
     require_ok($module) || BAIL_OUT();
 }
-
-# vim: ts=4 sts=4 sw=4 et: syntax=perl
