@@ -2,6 +2,9 @@ Revision history for Dist-Zilla-PluginBundle-Author-SKIRMESS
 
 {{$NEXT}}
 
+  - Create the 00-load.t test
+  - Removed Perl::Critic policy Modules::ProhibitExcessMainComplexity
+
 0.022  2017-09-19 21:56:17 UTC
 
   - Also commit files copied from bin/ with CopyFilesFromRelease
